9th Needs refactor of AutomaticUserOnboarding.

--- a/back/.env
+++ b/back/.env
@@ -38,5 +38,7 @@ PASETO_SECRET_KEY_RT=k4.secret.4yFbb2g1z9txD7h2-J_askRgBfeFgQHylcto3-VT8oS8a9sav
 RT_EXPIRATION = 72 hours
 AT_EXPIRATION = 15 seconds
 
-
+# GuardHash
+AUTH_GUARD_HASH_AT=mzd1JCglCw3iynUnd0p5jmIONizcGn4JgsUdeuPcXBAdD7aJncL
+AUTH_GUARD_HASH_RT=hMbEp2hgtaaDKP5I6LVvCtD4uoogLDec81c1hxx2sxYJHbojtL
 
