--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.0",
+    "@fastify/formbody": "^8.0.1",
     "argon2": "^0.41.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
